Bug 117577 - typo for german: training menu entry wrong
Summary: typo for german: training menu entry wrong
Status: RESOLVED FIXED
Alias: None
Product: i18n
Classification: Translations
Component: de (other bugs)
Version First Reported In: 1.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Reitelbach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-03 11:46 UTC by Christian Herzberg
Modified: 2005-12-03 19:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Herzberg 2005-12-03 11:46:02 UTC
Version:           1.4 (using KDE 3.4.2, Debian Package 4:3.4.2-4 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.12-1-686

The menu-entry for Standardlessons should be "Standardlektionen" instead of "Standardektionen" in the german version.
Comment 1 Christian Herzberg 2005-12-03 11:55:37 UTC
Another hint for the german translation:
A submenu in Preferences is still in english, but in the dialog-window to customize KTouch it's allright.
In german the submenu is called "Tastaturfarbschemata", it should be something like "keyboard-color-scheme" in english.
Comment 2 Thomas Reitelbach 2005-12-03 18:16:19 UTC
Danke für den Fehlerbericht. Den ersten Teil des Bugs habe ich grade behoben (Standardlektionen).

Der zweite Teil muss im Programm selbst behoben werden, deshalb lasse ich den Bug offen.
Comment 3 Thomas Reitelbach 2005-12-03 19:35:31 UTC
SVN commit 485303 by reitelbach:

Fix bug 117577 (missing i18n calls).
This will introduce one new String.

BUG:117577
CCMAIL:kde-i18n-doc@kde.org


 M  +4 -4      ktouch.cpp  


--- branches/KDE/3.5/kdeedu/ktouch/src/ktouch.cpp #485302:485303
@@ -676,7 +676,7 @@
 void KTouch::createDefaultColorSchemes() {
     KTouchColorScheme color;
 
-    color.m_name = "Black'n White";
+    color.m_name = i18n("Black'n White");
     color.m_frame = Qt::black;
     for (int i=0; i<8; ++i)
         color.m_background[i] = Qt::white;
@@ -689,7 +689,7 @@
     color.m_cTextH = Qt::black;
     m_colorSchemes.push_back(color);
 
-    color.m_name = "Classic";
+    color.m_name = i18n("Classic");
     color.m_frame = Qt::black;
     color.m_background[0] = QColor(255,238,  7);     color.m_background[4] = QColor(247,138,247);
     color.m_background[1] = QColor( 14,164,239);     color.m_background[5] = QColor(158,255,155);
@@ -704,7 +704,7 @@
     color.m_cTextH = Qt::black;
     m_colorSchemes.push_back(color);
 
-    color.m_name = "Deep Blue";
+    color.m_name = i18n("Deep Blue");
     color.m_frame = QColor(220,220,220);
     color.m_background[0] = QColor(  0, 39, 80);     color.m_background[4] = QColor( 24, 19, 72);
     color.m_background[1] = QColor( 39, 59,127);     color.m_background[5] = QColor(  8, 44,124);
@@ -719,7 +719,7 @@
     color.m_cTextH = Qt::white;
     m_colorSchemes.push_back(color);
 
-    color.m_name = "Stripy";
+    color.m_name = i18n("Stripy");
     color.m_frame = Qt::black;
     for (int i=0; i<8; i=i+2)
         color.m_background[i] = QColor( 39, 70, 127);