Fix bug 117577 (missing i18n calls). This will introduce one new String.

BUG:117577
CCMAIL:kde-i18n-doc@kde.org

svn path=/branches/KDE/3.5/kdeedu/ktouch/; revision=485303